--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,107 @@
-/* A modern CSS reset by Andy Bell https://github.com/hankchizljaw/modern-css-reset */
+:root {
+
+  --cbi-tropical-rain-forest: #007a5e;
+  --cbi-aqua-deep: #034e3c;
+  --cbi-caribbean-green: #00c69a;
+  --cbi-lava: #ce1227;
+  --cbi-cornell-red: #b61021;
+  --cbi-mandy: #d65260;
+  --cbi-candlelight: #fbce15;
+  --cbi-california: #fe9c09;
+  --cbi-yellow: #fcfd0a;
+  --color-black: #000;
+  --color-black-90: #1a1a1a;
+  --color-black-80: #333;
+  --color-black-70: #4d4d4d;
+  --color-black-60: #666;
+  --color-black-50: #808080;
+  --color-black-40: #999;
+  --color-black-30: #b3b3b3;
+  --color-black-20: #ccc;
+  --color-black-10: #e6e6e6;
+  --color-white: #fff;
+
+  --font-family: 'Avenir Next', sans-serif;
+  --font-family-condensed: 'Avenir Next Condensed', sans-serif;
+  --font-family-alt: 'Spectral', serif;
+  --font-family-display: var(--font-family);
+  --font-family-text: var(--font-family);
+  --font-family-system: -apple-system, BlinkMacSystemFont, "helvetica neue",
+    helvetica, Ubuntu, roboto, noto, segoe ui, arial, sans-serif;
+  --font-family-mono: Menlo, Consolas, Monaco, "Liberation Mono",
+    "Lucida Console", monospace;
+
+  --font-weight-thin: 100;
+  --font-weight-extra-light: 200;
+  --font-weight-light: 300;
+  --font-weight: 400;
+  --font-weight-medium: 500;
+  --font-weight-semi-bold: 600;
+  --font-weight-bold: 700;
+  --font-weight-extra-bold: 800;
+  --font-weight-black: 900;
+
+  --text-scale-ratio: 1.125;
+
+  --font-size-xxxx-display: 4.624rem;
+  --font-size-xxx-display: 4.11rem;
+  --font-size-xx-display: 3.653rem;
+  --font-size-x-display: 2.887rem;
+  --font-size-display: 2.566rem;
+  --font-size-xxxx-large: 2.027rem;
+  --font-size-xxx-large: 1.802rem;
+  --font-size-xx-large: 1.602rem;
+  --font-size-x-large: 1.424rem;
+  --font-size-large: 1.266rem;
+  --font-size-medium: 1.125rem;
+  --font-size: 1rem;
+  --font-size-small: 0.889rem;
+  --font-size-x-small: 0.79rem;
+
+  /* 73px, 65px, 58px, 46px, 41px, 36px, 28px, 25px, 22px, 20px, 18px, 16px, 14px, 12px */
+
+
+  --line-height-text: 1.3;
+  --line-height-display: 1.125;
+  --line-height-alt: 1.25;
+  --line-height: 1;
+
+
+  --border-radius-x-small: 0.25rem;
+  --border-radius-small: 0.5rem;
+  --border-radius-medium: 0.75rem;
+  --border-radius-large: 1rem;
+  --border-radius-circle: 50%;
+
+
+  --border-width-hairline: 1px;
+  --border-width-thin: 2px;
+  --border-width-thick: 4px;
+  --border: var(--border-width-hairline) solid var(--scholium-green-darker);
+  --border-thick: var(--border-width-thick) solid var(--scholium-green-dark);
+
+
+  --max-width: 90rem;
+  --min-width: 60rem;
+  --spacing-xx-small: 0.125rem;
+  --spacing-x-small: 0.25rem;
+  --spacing-small: 0.5rem;
+  --spacing: 0.75rem;
+  --spacing-medium: 1rem;
+  --spacing-large: 1.5rem;
+  --spacing-x-large: 2rem;
+  --spacing-xx-large: 3rem;
+
+  /* 300px, 480px, 768px, 1024px, 1200px, 1400px */
+  --bp-x-small: 18.75em;
+  --bp-small: 30em;
+  --bp-medium: 48em;
+  --bp-large: 64em;
+  --bp-x-large: 75em;
+  --bp-xx-large: 87.5rem;
+}
+
+
 
 *,
 *::before,
