--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,8 @@
   --font-weight-extra-bold: 800;
   --font-weight-black: 900;
 
+  /* 73px, 65px, 58px, 46px, 41px, 36px, 28px, 25px, 22px, 20px, 18px, 16px, 14px, 12px */
   --text-scale-ratio: 1.125;
-
   --font-size-xxxx-display: 4.624rem;
   --font-size-xxx-display: 4.11rem;
   --font-size-xx-display: 3.653rem;
@@ -58,14 +58,10 @@
   --font-size-small: 0.889rem;
   --font-size-x-small: 0.79rem;
 
-  /* 73px, 65px, 58px, 46px, 41px, 36px, 28px, 25px, 22px, 20px, 18px, 16px, 14px, 12px */
-
-
   --line-height-text: 1.3;
   --line-height-display: 1.125;
   --line-height-alt: 1.25;
   --line-height: 1;
-
 
   --border-radius-x-small: 0.25rem;
   --border-radius-small: 0.5rem;
@@ -139,7 +135,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--font-family-system);
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
